# SystemProg

Lab2/: CMakeLists.txt  main.c
Lab2/lib/: CMakeLists.txt  tasks.c  tasks.h
Lab3/: CMakeLists.txt  file.txt  main.c
Lab3/lib/: CMakeLists.txt  commonfuncs.c  fmap.c  getline.c  util.c  util.h  winapifiles.c
Lab3/lib/include/: util.h
Lab3/lib/src/: commonfuncs.c  fmap.c  winapifiles.c
Lab3/test/: file2.txt  file333.txt  file3_new2.txt  file_new_name_copy.txt
Lab4/: CMakeLists.txt  main.c
Lab4/lib/: CMakeLists.txt
Lab4/lib/include/: common.h  util.h
Lab4/lib/src/: common.c  util.c
Lab5/: CMakeLists.txt  main.c
Lab5/lib/: CMakeLists.txt
Lab5/lib/include/: common.h  list.h  util.h
Lab5/lib/src/: common.c  list.c  util.c
Lab6/: README.md
Lab6/client/: CMakeLists.txt  file.txt  main.c
Lab6/client/instl/: file.txt
Lab6/client/lib/: CMakeLists.txt
Lab6/client/lib/include/: client.h  clientmsgservice.h
Lab6/client/lib/src/: client.c  client_pipe.c  clientmsgservice.c  list.c
Lab6/server/: CMakeLists.txt  main.c
Lab6/server/lib/: CMakeLists.txt
Lab6/server/lib/include/: list.h  msgservice.h  server.h
Lab6/server/lib/src/: msgservice.c  server.c  server_pipe.c
Lab8/: CMakeLists.txt  integrity_checker.cpp
Lab8/cryptolib/: CMakeLists.txt
Lab8/cryptolib/include/: integrity.h
Lab8/cryptolib/src/: integrity.cpp
Lab8/fileselectorlib/: CMakeLists.txt
Lab8/fileselectorlib/include/: file_select.h
Lab8/fileselectorlib/src/: file_select.cpp
Lab8/integritylistlib/: CMakeLists.txt
Lab8/integritylistlib/include/: integritylist.h
Lab8/integritylistlib/src/: integritylist.cpp  list.cpp
