project(Client)
include_directories(${CMAKE_SOURCE_DIR}/lib/include)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
if(COMMAND cmake_policy)
cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
add_executable(Client ${CMAKE_SOURCE_DIR}/main.c)
target_link_libraries(Client ClientLib)
target_link_libraries(Client -lwsock32 -lws2_32 -lcrypt32)