project(server)
include_directories(${CMAKE_SOURCE_DIR}/lib/include)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
if(COMMAND cmake_policy)
cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
add_executable(Server ${CMAKE_SOURCE_DIR}/main.c)
#target_link_options(Server PRIVATE -lwsock32 -lws2_32)
target_link_libraries(Server ServerLib -lwsock32 -lws2_32)
#target_link_libraries(Server -lwsock32 -lws2_32)